# Crack-The-Coding-Interview

./: .gitignore  Google-SDE-Round-1.txt  README.md
Amazon SDE Assessments/assessment-01-category-browse-engine-code repository debugging challenge/: README.md
Amazon SDE Assessments/assessment-01-category-browse-engine-code repository debugging challenge/starter/: .gitignore  CMakeLists.txt  README.md  run.sh
Amazon SDE Assessments/assessment-01-category-browse-engine-code repository debugging challenge/starter/data/: requests.jsonl
Amazon SDE Assessments/assessment-01-category-browse-engine-code repository debugging challenge/starter/include/browse/: engine.hpp  file_io.hpp
Amazon SDE Assessments/assessment-01-category-browse-engine-code repository debugging challenge/starter/src/browse/: engine.cpp  main.cpp  parser.cpp
Amazon SDE Assessments/assessment-01-category-browse-engine-code repository debugging challenge/starter/tests/: engine_test.cpp
smartsheet/: reduce-op1.js  reduce-op2.js  reduce-op3.js
src/amazon/: HackerRank Question - Code Question 1 (7_22_2022 3_43_32 PM).html  HackerRank Question - Code Question 2 (7_22_2022 3_43_58 PM).html  OA.java  Q1.java  Q1_original_submission.java
src/amazon/live_round_q1/: Skyline.java  Solution.java
src/amazon/q_1/: Q1.java  (+1 more)
src/arraylist_solution/: Main.java
src/linked_hashmap/: RestaurantWaitListDSwithHashMap.java
src/meta/: IntervalMerger.java  Q1.java  meta-oa.txt
src/toptal/: Task3.java  toptal-hiring-process  toptal-hiring-process.txt
src/turing/: Depth.java  Judge_2.java
(+16 files in other folders)
